[package]
name = "backend"
version = "0.1.0"
authors = ["Zoe Juozapaitis <Jragonmiris@gmail.com>"]

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
scaii_defs = {git = "https://github.com/SCAII/SCAII", branch="dev"}
rlua  = "0.9"
serde = "1"
serde_derive = "1"
ndarray = {version="0.10", features=["serde-1"]}
rand = "0.3"
lifeguard = "0.5"
lazy_static = "0.2"
bincode = "0.9"

prost = "0.2"
prost-derive = "0.2"
bytes = "0.4.5"

[build-dependencies]
prost-build = "0.2"
glob = "0.2.11"

[dev-dependencies]
websocket = "0.20"