[package]
name = "backend"
version = "0.1.0"
authors = ["Zoe Juozapaitis <Jragonmiris@gmail.com>"]

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
scaii_defs = {git = "https://github.com/SCAII/SCAII", branch="glue"}
rlua  = "0.9"
serde = "1"
serde_derive = "1"
rand = { git = 'https://github.com/LinearZoetrope/rand', branch="serde", features=["serde-1"] }
bincode = "0.9"
# we need saveload. Fix this when specs hits 0.11
specs = { version="0.10", features=["serde"], git="https://github.com/slide-rs/specs"}
specs-derive = "0.1"

prost = "0.2"
prost-derive = "0.2"
bytes = "0.4.5"

[build-dependencies]
prost-build = "0.2"
glob = "0.2.11"
